--- a/menu.html
+++ b/menu.html
@@ -25,21 +25,62 @@
         <div class="drip"></div>
     </header>
 
-    <section class="content">
-        <h1>Our Menu</h1>
-        <ul>
-            <li>Dark Chocolate Bites</li>
-            <li>Oat Cookies</li>
-            <li>Heart Shaped Chocolates (Milk, White, Dark)</li>
-            <li>Kunafa Bar</li>
-            <li>Lotus Biscoff Chocolate Bar</li>
-            <li>Brownies</li>
-            <li>Donuts</li>
-            <li>Chocolate Lollipops</li>
-            <li>Handcrafted Chocolates</li>
-            <li>Marshmallow Chocolate Bar</li>
-        </ul>
-    </section>
+    <section class="menu-gallery">
 
+    <div class="menu-item">
+        <img src="bites.jpg" alt="Dark Chocolate Bites">
+        <h3>Dark Chocolate Bites</h3>
+        <p>Rich, bite-sized dark chocolate treats.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="oats.jpg" alt="Oat Cookies">
+        <h3>Oat Cookies</h3>
+        <p>Chewy and healthy oat-based cookies.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="hearts.jpg" alt="Heart Shaped Chocolates">
+        <h3>Heart Shaped Chocolates</h3>
+        <p>Milk, white, and dark chocolate hearts.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="kunafa.jpg" alt="Kunafa Bar">
+        <h3>Kunafa Bar</h3>
+        <p>Middle Eastern dessert twist with chocolate.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="lotus.jpg" alt="Lotus Biscoff Chocolate Bar">
+        <h3>Lotus Biscoff Chocolate Bar</h3>
+        <p>Crunchy Lotus Biscoff in creamy chocolate.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="brownie.jpg" alt="Brownies">
+        <h3>Brownies</h3>
+        <p>Fudgy and rich chocolate brownies.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="donut.jpg" alt="Donuts">
+        <h3>Donuts</h3>
+        <p>Soft donuts with chocolate glaze.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="lolli.jpg" alt="Chocolate Lollipops">
+        <h3>Chocolate Lollipops</h3>
+        <p>Fun chocolate lollipops for all ages.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="marsh.jpg" alt="Marshmallow Chocolate Bar">
+        <h3>Marshmallow Chocolate Bar</h3>
+        <p>Fluffy marshmallow with chocolate coating.</p>
+    </div>
+
+</section>
 </body>
 </html>
