--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,17 @@
         <h3>Heart Shaped Chocolates</h3>
         <p>Milk, white, and dark chocolate hearts.</p>
     </div>
+    <div class="menu-item">
+        <img src="hearts2.jpg" alt="Heart Shaped Chocolates">
+        <h3>Heart Shaped Chocolates</h3>
+        <p>Milk, white, and dark chocolate hearts.</p>
+    </div>
+    <div class="menu-item">
+        <img src="hearts3.jpg" alt="Heart Shaped Chocolates">
+        <h3>Heart Shaped Chocolates</h3>
+        <p>Milk, white, and dark chocolate hearts.</p>
+    </div>
+    
 
     <div class="menu-item">
         <img src="kunafa.jpg" alt="Kunafa Bar">
@@ -74,11 +85,53 @@
         <h3>Chocolate Lollipops</h3>
         <p>Fun chocolate lollipops for all ages.</p>
     </div>
+    <div class="menu-item">
+        <img src="lolli2.jpg" alt="Chocolate Lollipops">
+        <h3>Chocolate Lollipops</h3>
+        <p>Fun chocolate lollipops for all ages.</p>
+    </div>
+    <div class="menu-item">
+        <img src="lolli3.jpg" alt="Chocolate Lollipops">
+        <h3>Chocolate Lollipops</h3>
+        <p>Fun chocolate lollipops for all ages.</p>
+    </div>
+
 
     <div class="menu-item">
         <img src="marsh.jpg" alt="Marshmallow Chocolate Bar">
         <h3>Marshmallow Chocolate Bar</h3>
         <p>Fluffy marshmallow with chocolate coating.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="handcrafted.jpg" alt="Handcrafted">
+        <h3>Handcrafted Chocolates</h3>
+        <p>Rich, bite-sized Handcrafted chocolate treats.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="luv.jpg" alt="LOVE YOU Cookies">
+        <h3>LOVE YOU CHOCOLATE</h3>
+        <p>Perfect anniverssary gift for you significant other.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="marble.jpg" alt="marble Chocolates">
+        <h3>Marble Chocolates</h3>
+        <p>Marbled chocolate pieces.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="raakhi.jpg" alt="Raakhi Special">
+        <h3>I love bro/sis Bar</h3>
+        <p>Raakhi special.</p>
+    </div>
+
+    <div class="menu-item">
+        <img src="rakhi2.jpg" alt="Raakhi Special">
+        <h3>I love bro/sis Bar</h3>
+        <p>Raakhi special.</p>
+    </div>
     </div>
 
 </section>
