--- a/reviews.html
+++ b/reviews.html
@@ -30,7 +30,8 @@
         <div>
             <p>⭐⭐⭐⭐⭐ "The chocolates have the perfect amout of crunch and sweetness in them🥹🤌🏻 they are better than all big chocolates brands like dairy milk, 5 stars and all. I wish nothing but sucess to the creator of Frosted Crave❤  these chocolates are actually amaizing" – Aditya</p> <br><br>
             <p>⭐⭐⭐⭐⭐ "KUNAFA CHOCOLATES 🍫 TASTE IS DELICIOUS" – Rikin</p> <br><br>
-            <p>⭐⭐⭐⭐ "The chocolates were truly delightful 🍫 — the dark chocolate struck the perfect balance between bitterness and sweetness 🍬✨" – Roshan</p>
+            <p>⭐⭐⭐⭐ "The chocolates were truly delightful 🍫 — the dark chocolate struck the perfect balance between bitterness and sweetness 🍬✨" – Roshan</p> <br>
+            <p>⭐⭐⭐⭐ "A BIG THANK YOU FOR SENDING THESE DELICIOUS CHOCOLATES 🍫 — JUST LOVE IT✨" – Muskan</p>
         </div>
     </section>
 
