--- a/about.html
+++ b/about.html
@@ -20,8 +20,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="about.html" class="active">About Me</a></li>
+                <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order</a></li>
             </ul>
         </nav>
         <div class="drip"></div>
