--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,7 @@
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order</a></li>
             </ul>
         </nav>
         <div class="drip"></div>
