--- a/order.html
+++ b/order.html
@@ -13,7 +13,7 @@
     }
     h1 {
       text-align: center;
-      color: #5a2d0c;
+      color: #15c5cd;
     }
     form {
       max-width: 700px;
@@ -47,7 +47,7 @@
       width: 60px;
     }
     button {
-      background: #5a2d0c;
+      background: #15c5cd;
       color: #fff;
       border: none;
       cursor: pointer;
@@ -55,7 +55,7 @@
       margin-top: 15px;
     }
     button:hover {
-      background: #7c3f14;
+      background: #15c5cd;
     }
     #responseMsg {
       text-align: center;
@@ -63,8 +63,23 @@
       font-weight: bold;
     }
   </style>
+      <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="order.html">Order</a></li>
+            </ul>
+        </nav>
+        <div class="drip"></div>
+    </header>
 
 <h1>Order Your Chocolates</h1>
 <form id="orderForm">
@@ -100,7 +115,7 @@
 <p id="responseMsg"></p>
 
 <script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycbxAb_psAL3hBApihZwlaBfORXThteDrzn1CwBO0jxj1yZuguh-vf6zUmwibNAhVi3Rm/exec'; // <-- Replace this with your Google Apps Script Web App URL
+  const scriptURL = "https://script.google.com/macros/s/AKfycbxrNxHeFLwLPufU8841blrmzS5lbtWxF9WUOb1XR2CKNlGEbhmaJw9M7e4vV4LqX1-e/exec";
   const form = document.getElementById('orderForm');
   const responseMsg = document.getElementById('responseMsg');
 
@@ -109,55 +124,51 @@
 
     const formData = new FormData(form);
 
-    // Build items array with quantities > 0
+    // Build array of items with quantity > 0
     const items = [];
     for (const [key, value] of formData.entries()) {
-      if (
-        key !== 'name' &&
-        key !== 'phone' &&
-        key !== 'address' &&
-        key !== 'instructions'
-      ) {
+      if (!["name", "phone", "address", "instructions"].includes(key)) {
         const qty = Number(value);
-        if (qty > 0) {
-          items.push({ item: key, quantity: qty });
-        }
+        if (qty > 0) items.push({ item: key, quantity: qty });
       }
     }
 
     if (items.length === 0) {
-      responseMsg.textContent = 'Please order at least one item.';
-      responseMsg.style.color = 'red';
+      responseMsg.textContent = "Please order at least one item.";
+      responseMsg.style.color = "red";
       return;
     }
 
     const data = {
-      name: formData.get('name'),
-      phone: formData.get('phone'),
-      address: formData.get('address'),
-      instructions: formData.get('instructions'),
-      items: items
+      name: formData.get("name"),
+      phone: formData.get("phone"),
+      address: formData.get("address"),
+      instructions: formData.get("instructions")
     };
+    items.forEach((item, idx) => {
+      data[`item${idx+1}`] = item.item;
+      data[`qty${idx+1}`] = item.quantity;
+    });
 
     fetch(scriptURL, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(data)
+      method: "POST",
+      headers: { "Content-Type": "application/x-www-form-urlencoded" },
+      body: new URLSearchParams(data).toString()
     })
     .then(response => response.json())
     .then(result => {
-      if (result.status === 'success') {
-        responseMsg.textContent = 'Order placed successfully!';
-        responseMsg.style.color = 'green';
+      if (result.status === "success") {
+        responseMsg.textContent = "Order placed successfully!";
+        responseMsg.style.color = "green";
         form.reset();
       } else {
-        responseMsg.textContent = 'Error: ' + result.message;
-        responseMsg.style.color = 'red';
+        responseMsg.textContent = "Error: " + result.message;
+        responseMsg.style.color = "red";
       }
     })
     .catch(error => {
-      responseMsg.textContent = 'Error sending order: ' + error.message;
-      responseMsg.style.color = 'red';
+      responseMsg.textContent = "Error sending order: " + error.message;
+      responseMsg.style.color = "red";
     });
   });
 </script>
