--- a/order.html
+++ b/order.html
@@ -66,6 +66,9 @@
       <link rel="stylesheet" href="style.css">
 </head>
 <body>
+      <div class="logo">
+        <img src="logo.png" alt="Frosted Crave Logo">
+    </div>
 
     <header>
         <nav>
