--- a/order.html
+++ b/order.html
@@ -5,79 +5,113 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chocolate Shop Order</title>
   <style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f8f4f0;
-    color: #333;
-    padding: 20px;
-  }
-
-  h1 {
-    text-align: center;
-    color: #15c5cd;
-  }
-
-  form {
-    max-width: 700px;
-    margin: auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  }
-
-  label {
-    font-weight: bold;
-    margin-top: 10px;
-    display: block;
-    color: #15c5cd;
-  }
-
-  input, textarea, button {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-  }
-
-  .menu-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 5px 0;
-    padding: 8px;
-    border-bottom: 1px solid #eee;
-  }
-
-  .menu-item input {
-    width: 60px;
-    text-align: center;
-  }
-
-  button {
+    body {
+      font-family: Arial, sans-serif;
+      background: #f8f4f0;
+      color: #333;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #15c5cd;
+    }
+    form {
+      max-width: 700px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    label {
+      font-weight: bold;
+      margin-top: 10px;
+      display: block;
+    }
+    input, textarea, button {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    .menu-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 5px 0;
+      padding: 8px;
+      border-bottom: 1px solid #eee;
+    }
+    .menu-item input {
+      width: 60px;
+    }
+    button {
+      background: #15c5cd;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      margin-top: 15px;
+    }
+    button:hover {
+      background: #15c5cd;
+    }
+    body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
     background: #15c5cd;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    margin-top: 15px;
-    border-radius: 5px;
-    transition: background 0.3s ease;
-  }
-
-  button:hover {
-    background: #12a4ab;
-  }
-
-  #responseMsg {
+    color: #333;
     text-align: center;
-    margin-top: 15px;
-    font-weight: bold;
-    color: #15c5cd;
-  }
-</style>
+}
 
+
+/* ====== LOGO ====== */
+.logo {
+    text-align: center;
+    margin: 15px 0;
+}
+
+.logo img {
+    max-width: 180px;
+}
+
+/* ====== HEADER (Ribbon Style) ====== */
+header {
+    background: linear-gradient(90deg, #fc3d78, #f78c10, #fcc009, #00afdd, #10c5c6, #824ac9);
+    padding: 15px 0;
+    position: static;
+    border: 5px solid #ffffff;    /* White border around header */
+    border-radius: 4px;           /* Rounded edges */
+    margin: 10px;
+}
+    #responseMsg {
+      text-align: center;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+    nav ul.menu {
+    list-style: none;
+    text-align: center;
+}
+
+nav ul.menu li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+nav ul.menu li a {
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    font-size: 18px;
+    transition: color 0.3s ease;
+}
+
+nav ul.menu li a:hover {
+    color: #000;
+}
+  </style>
 </head>
 <body>
       <div class="logo">
